// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApolloParser should parse "/home/data/readonly/Group Trip/videos/Group Trip - Some Interesting Video-1.mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "index": 1,
  "languages": Array [],
  "name": "Group Trip - Some Interesting Video",
}
`;

exports[`ApolloParser should parse "/home/data/readonly/Group Trip/videos/Some Interesting Video-1.mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "index": 1,
  "languages": Array [],
  "name": "Group Trip/Some Interesting Video",
}
`;

exports[`ApolloParser should parse "/home/ryan/clone/Family Guy - Complete H265/Season 17 [1080p x265][MP3 5.1]/Family.Guy.S17E16 [1080p Web x265][MP3 5.1].mp4" 1`] = `
Object {
  "audio": Array [
    "mp3",
    "5.1",
  ],
  "coding": Array [
    "x265",
  ],
  "collection": false,
  "episodeId": "tt9652794",
  "episodeName": "You Can't Handle the Booth",
  "episodeNumber": Array [
    16,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt0182576",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0182576",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0182576",
    },
  ],
  "name": "Family Guy",
  "quality": "WEB-DL",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 17,
  "startYear": 1999,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/home/videos/Test Group/videos/Test Group compilation.mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "languages": Array [],
  "name": "Test Group Compilation",
}
`;

exports[`ApolloParser should parse "/mnt/vtfs/torrents/completed/Peaky_Blinders_S01E01_x265_1080p_BluRay_30nama_30NAMA.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x265",
  ],
  "collection": false,
  "endYear": 2022,
  "episodeId": "tt2471500",
  "episodeName": "Episode #1.1",
  "episodeNumber": Array [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt2442560",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt2442560",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt2442560",
    },
  ],
  "name": "Peaky Blinders",
  "quality": "BluRay",
  "releaseGroup": "30NAMA",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2013,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/vtfs/torrents/completed/Trailer Park Boys Season 9 [1080p] [HEVC]/S09E05 The Motel Can't Live at the Motel.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "HEVC",
  ],
  "collection": false,
  "endYear": 2018,
  "episodeId": "tt3757674",
  "episodeName": "The Motel Can't Live at the Motel",
  "episodeNumber": Array [
    5,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0290988",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0290988",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0290988",
    },
  ],
  "name": "Trailer Park Boys",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 9,
  "startYear": 2001,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/vtfs/torrents/completed/Trailer.Park.Boys.Season.9.[1080p].[HEVC]/S09E05.The.Motel.Can't.Live.at.the.Motel.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "HEVC",
  ],
  "collection": false,
  "endYear": 2018,
  "episodeId": "tt3757674",
  "episodeName": "The Motel Can't Live at the Motel",
  "episodeNumber": Array [
    5,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0290988",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0290988",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0290988",
    },
  ],
  "name": "Trailer Park Boys",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 9,
  "startYear": 2001,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/vtfs/torrents/completed/Trailer/Not a Show Season 9 [1080p] [HEVC]/S09E05.mkv" 1`] = `undefined`;

exports[`ApolloParser should parse "/mnt/z/Archer S01e01-10/Archer.1x05.Honeypot.1080p.BDMux.ITA.ENG.Subs.x264-Fratposa.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x264",
  ],
  "collection": false,
  "episodeId": "tt1598645",
  "episodeName": "Honeypot",
  "episodeNumber": Array [
    5,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt1486217",
  "languages": Array [
    "ITA",
    "ENG",
  ],
  "links": Array [
    Object {
      "id": "tt1486217",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1486217",
    },
  ],
  "name": "Archer",
  "releaseGroup": "Fratposa",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2009,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/z/completed/Top Gear UK 1-17/Top Gear - Season 16/Top Gear - [16x00] The_Three_Wise_Men_Christmas.avi" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "episodeId": "tt1802727",
  "episodeName": "Middle East Special",
  "episodeNumber": Array [
    0,
  ],
  "extension": ".avi",
  "fileType": "VIDEO",
  "imdbId": "tt1628033",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1628033",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1628033",
    },
  ],
  "name": "Top Gear",
  "seasonNumber": 16,
  "seasons": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
  ],
  "startYear": 2002,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/American Dad S01 - S13/Season 10/American Dad! - 10x04 - Crotchwalkers.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "episodeId": "tt4134636",
  "episodeName": "Big Stan on Campus",
  "episodeNumber": Array [
    4,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0397306",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0397306",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0397306",
    },
  ],
  "name": "American Dad!",
  "seasonNumber": 10,
  "startYear": 2005,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/American Dad S01 - S13/Season 13/American Dad! - 13x04 - N.S.A. (No Snoops Allowed).mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "episodeId": "tt7787730",
  "episodeName": "Shell Game",
  "episodeNumber": Array [
    4,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0397306",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0397306",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0397306",
    },
  ],
  "name": "American Dad!",
  "seasonNumber": 13,
  "startYear": 2005,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/ConAir.1997.720p.BluRay.x264.AC3-RiPRG/ConAir.1997.720p.BluRay.x264.AC3-RiPRG.mkv" 1`] = `
Object {
  "audio": Array [
    "ac3",
    "ac3",
  ],
  "coding": Array [
    "x264",
    "x264",
  ],
  "collection": false,
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0118880",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0118880",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0118880",
    },
  ],
  "name": "Con Air",
  "quality": "BluRay",
  "releaseGroup": "RiPRG",
  "resolution": Object {
    "height": 720,
    "width": null,
  },
  "startYear": 1997,
  "titleType": 0,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/Logan (2017) [1080p] [YTS.AG]/Logan.2017.1080p.BluRay.x264-[YTS.AG].mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x264",
  ],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt3315342",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt3315342",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3315342",
    },
  ],
  "name": "Logan",
  "quality": "BluRay",
  "releaseGroup": "YTS.AG",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "startYear": 2017,
  "titleType": 0,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/Love.Death.and.Robots.S01.ITA.ENG.1080p.NF.WEB-DLMux.DD5.1.x264-Morpheus/Love.Death.and.Robots.1x01.Il.Vantaggio.di.Sonnie.ITA.ENG.1080p.NF.WEB-DLMux.DD5.1.x264-Morpheus.mkv" 1`] = `
Object {
  "audio": Array [
    "dd5.1",
    "dd5.1",
  ],
  "coding": Array [
    "x264",
    "x264",
  ],
  "collection": false,
  "episodeId": "tt9781722",
  "episodeName": "Sonnie's Edge",
  "episodeNumber": Array [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt9561862",
  "languages": Array [
    "ITA",
    "ENG",
    "ITA",
    "ENG",
  ],
  "links": Array [
    Object {
      "id": "tt9561862",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt9561862",
    },
  ],
  "name": "Love, Death & Robots",
  "poster": "https://m.media-amazon.com/images/M/MV5BYTNiYTNkNTAtYzE3ZS00ZDQ1LWEwZTYtZjI1NzYzMWJjY2U4XkEyXkFqcGdeQXVyODk4OTc3MTY@._V1_.jpg",
  "releaseGroup": "Morpheus",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/Top Gear UK 1-17/Top Gear - Season 7/Top Gear - [07x06] - 2005.12.27 [GOTHiC].avi" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "date": 2005-12-26T16:00:00.000Z,
  "episodeId": "tt729722",
  "episodeName": "Mazda MX-5 vs. Greyhound",
  "episodeNumber": Array [
    6,
  ],
  "extension": ".avi",
  "fileType": "VIDEO",
  "imdbId": "tt1628033",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1628033",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1628033",
    },
  ],
  "name": "Top Gear",
  "releaseGroup": "GOTHiC",
  "seasonNumber": 7,
  "seasons": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
  ],
  "startYear": 2002,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/Top Gear UK 1-17/Top Gear - Season 10/(auto) Top Gear - 10.07.2008 - [10x01] - [Greatest road in EU].avi" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "date": 2008-10-06T16:00:00.000Z,
  "episodeId": "tt1114654",
  "episodeName": "The Search for the Greatest Driving Road in the World",
  "episodeNumber": Array [
    1,
  ],
  "extension": ".avi",
  "fileType": "VIDEO",
  "imdbId": "tt1628033",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1628033",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1628033",
    },
  ],
  "name": "Top Gear",
  "releaseGroup": "EU",
  "seasonNumber": 10,
  "seasons": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
  ],
  "startYear": 2002,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/Top Gear UK 1-17/Top Gear - Season 11/(auto) Top Gear - 2008 - [11x01] - 2008.06.22 [$1k cop car].avi" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "date": 2008-06-21T16:00:00.000Z,
  "episodeId": "tt1248080",
  "episodeName": "Police Car Challenge",
  "episodeNumber": Array [
    1,
  ],
  "extension": ".avi",
  "fileType": "VIDEO",
  "imdbId": "tt1628033",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1628033",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1628033",
    },
  ],
  "name": "Top Gear",
  "seasonNumber": 11,
  "seasons": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
  ],
  "startYear": 2002,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/mnt/z/torrents/completed/Watchmen.S01.COMPLETE.720p.AMZN.WEBRip.x264-GalaxySERIES[TGx]/Watchmen.S01E01.720p.AMZN.WEBRip.x264-GalaxySERIES.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x264",
  ],
  "collection": false,
  "endYear": 2019,
  "episodeId": "tt7401958",
  "episodeName": "It's Summer and We're Running Out of Ice",
  "episodeNumber": Array [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt7049682",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt7049682",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt7049682",
    },
  ],
  "name": "Watchmen",
  "quality": "WEB-DL",
  "releaseGroup": "GalaxySERIES",
  "resolution": Object {
    "height": 720,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "/test/[Beatrice-Raws] Fate Stay Night - Unlimited Blade Works TV-1 [BDRip 1920x1080 HEVC TrueHD]/NC/[Beatrice-Raws] Fate Stay Night - Unlimited Blade Works (Creditless ED_ep0) [BDRip 1920x1080 HEVC TrueHD].mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "HEVC",
    "HEVC",
  ],
  "collection": false,
  "contentRating": "TV-1",
  "endYear": 2015,
  "episodeNumber": Array [
    0,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt3621796",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt3621796",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3621796",
    },
  ],
  "name": "Fate/stay night: Unlimited Blade Works",
  "quality": "BluRay",
  "releaseGroup": "TrueHD",
  "resolution": Object {
    "height": 1080,
    "width": 1920,
  },
  "startYear": 2014,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "AVATAR Series (2005-2014) - COMPLETE The Last Airbender, 2010 Movie, Legend of Korra - 1080p BluRay x264\\2. The Legend of Korra (2012-14)\\Book 4a - Balance (2014)\\Avatar (TLoK) - S04 E10 - Operation Beifong (1080p - BluRay).mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "endYear": 2014,
  "episodeId": "tt4122678",
  "episodeName": "Operation Beifong",
  "episodeNumber": Array [
    10,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1695360",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1695360",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1695360",
    },
  ],
  "name": "The Legend of Korra",
  "quality": "BluRay",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 4,
  "startYear": 2012,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "Avatar (TLoK) - S03 E12 - Enter the Void (1080p - BluRay).mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "endYear": 2014,
  "episodeId": "tt3865216",
  "episodeName": "Enter the Void",
  "episodeNumber": Array [
    12,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1695360",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1695360",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1695360",
    },
  ],
  "name": "The Legend of Korra",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 3,
  "startYear": 2012,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "BigBuckBunny_640x360.m4v" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "extension": ".m4v",
  "fileType": "VIDEO",
  "languages": Array [],
  "name": "Big Buck Bunny",
  "resolution": Object {
    "height": 360,
    "width": 640,
  },
}
`;

exports[`ApolloParser should parse "Bob's Burgers 2011 SE 1 - 8 Complete Eng Only Burntodisc/SE1/02 Human Flesh.mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": true,
  "episodeId": "tt1646300",
  "episodeName": "Crawl Space",
  "episodeNumber": Array [
    2,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1561755",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1561755",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1561755",
    },
  ],
  "name": "Bob's Burgers",
  "poster": "https://m.media-amazon.com/images/M/MV5BZGJiNmM1NDctNWUxYS00YzE4LWJjNTgtYTJhYzE0NjFmMTMwXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_.jpg",
  "seasonNumber": 1,
  "seasons": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
  ],
  "startYear": 2011,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264 [TestGroup].mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "H264",
  ],
  "collection": false,
  "endYear": 2018,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt0383126",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0383126",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0383126",
    },
  ],
  "name": "MythBusters",
  "quality": "WEB-DL",
  "resolution": Object {
    "height": 576,
    "width": null,
  },
  "seasonNumber": 2003,
  "startYear": 2003,
  "titleType": 1,
}
`;

exports[`ApolloParser should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264-[TestGroup]" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "H264",
  ],
  "collection": false,
  "endYear": 2018,
  "extension": undefined,
  "fileType": "VIDEO",
  "imdbId": "tt0383126",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0383126",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0383126",
    },
  ],
  "name": "MythBusters",
  "quality": "WEB-DL",
  "releaseGroup": "TestGroup",
  "resolution": Object {
    "height": 576,
    "width": null,
  },
  "seasonNumber": 2003,
  "startYear": 2003,
  "titleType": 1,
}
`;

exports[`ApolloParser should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264-[TestGroup].mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "H264",
  ],
  "collection": false,
  "endYear": 2018,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt0383126",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0383126",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0383126",
    },
  ],
  "name": "MythBusters",
  "quality": "WEB-DL",
  "releaseGroup": "TestGroup",
  "resolution": Object {
    "height": 576,
    "width": null,
  },
  "seasonNumber": 2003,
  "startYear": 2003,
  "titleType": 1,
}
`;

exports[`ApolloParser should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264-SmartIdiot" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "H264",
  ],
  "collection": false,
  "endYear": 2018,
  "extension": undefined,
  "fileType": "VIDEO",
  "imdbId": "tt0383126",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0383126",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0383126",
    },
  ],
  "name": "MythBusters",
  "quality": "WEB-DL",
  "releaseGroup": "SmartIdiot",
  "resolution": Object {
    "height": 576,
    "width": null,
  },
  "seasonNumber": 2003,
  "startYear": 2003,
  "titleType": 1,
}
`;

exports[`ApolloParser should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264-TestGroup" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "H264",
  ],
  "collection": false,
  "endYear": 2018,
  "extension": undefined,
  "fileType": "VIDEO",
  "imdbId": "tt0383126",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0383126",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0383126",
    },
  ],
  "name": "MythBusters",
  "quality": "WEB-DL",
  "releaseGroup": "TestGroup",
  "resolution": Object {
    "height": 576,
    "width": null,
  },
  "seasonNumber": 2003,
  "startYear": 2003,
  "titleType": 1,
}
`;

exports[`ApolloParser should parse "Rick and Morty/Season 5/Episode 3.mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "episodeId": "tt14889192",
  "episodeName": "A Rickconvenient Mort",
  "episodeNumber": Array [
    3,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt2861424",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt2861424",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt2861424",
    },
  ],
  "name": "Rick and Morty",
  "seasonNumber": 5,
  "startYear": 2013,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "Se7en.1995.REMASTERED.1080p.BluRay.10bit.HEVC.6CH.MkvCage.ws.mkv" 1`] = `
Object {
  "audio": Array [
    "6ch",
  ],
  "coding": Array [
    "10bit",
    "HEVC",
  ],
  "collection": false,
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0114369",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0114369",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0114369",
    },
  ],
  "name": "Se7en",
  "quality": "BluRay",
  "releaseGroup": "MkvCage.ws",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "startYear": 1995,
  "titleType": 0,
}
`;

exports[`ApolloParser should parse "The Expanse S0E0.mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "endYear": 2022,
  "episodeNumber": Array [
    0,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt3230854",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt3230854",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3230854",
    },
  ],
  "name": "The Expanse",
  "startYear": 2015,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "The Hobbit & The Lord of The Rings Extended Trilogy 1080p 10bit BluRay x265 HEVC MRN/The Lord of The Rings Trilogy Extended Cut 1080p 10bit BluRay x265 HEVC 6CH -MRN/1-Fellowship.of.The.Ring.2001.Extended.Cut.1080p.10bit.BluRay.x265.HEVC.6CH-MRN.mkv" 1`] = `
Object {
  "audio": Array [
    "6ch",
  ],
  "coding": Array [
    "10bit",
    "x265",
    "HEVC",
  ],
  "collection": false,
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0120737",
  "index": 1,
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0120737",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0120737",
    },
  ],
  "name": "The Lord of the Rings: The Fellowship of the Ring",
  "quality": "BluRay",
  "releaseGroup": "MRN",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "startYear": 2001,
  "titleType": 0,
}
`;

exports[`ApolloParser should parse "The Simpsons (1989-2018) Seasons 01-29 & Movie [1080p] [Ultimate Batch] [HEVC] [x265] [pseudo]/Season 07/The Simpsons - S07E25 - Summer of 4 Ft 2 [1080p] [x265] [pseudo].mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x265",
  ],
  "collection": false,
  "endYear": 2018,
  "episodeId": "tt701219",
  "episodeName": "Summer of 4'2\\"",
  "episodeNumber": Array [
    25,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0096697",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0096697",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0096697",
    },
  ],
  "name": "The Simpsons",
  "releaseGroup": "pseudo",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 7,
  "seasons": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
  ],
  "startYear": 1989,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "The Simpsons (1989-2018) Seasons 01-29 & Movie [1080p] [Ultimate Batch] [HEVC] [x265] [pseudo]/Season 28/The Simpsons - S28E12E13 - The Great Phatsby [1080p] [x265] [pseudo].mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x265",
  ],
  "collection": false,
  "endYear": 2018,
  "episodeNumber": Array [
    12,
    13,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0096697",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt0096697",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0096697",
    },
  ],
  "name": "The Simpsons",
  "releaseGroup": "pseudo",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 28,
  "seasons": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
  ],
  "startYear": 1989,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "The.Walking.Dead.S01-S07.Season.1-7.1080p.10bit.BluRay.5.1.x265.HEVC" 1`] = `
Object {
  "audio": Array [
    "5.1",
  ],
  "coding": Array [
    "10bit",
    "x265",
    "HEVC",
  ],
  "collection": true,
  "endYear": 2022,
  "extension": undefined,
  "fileType": "VIDEO",
  "imdbId": "tt1520211",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1520211",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1520211",
    },
  ],
  "name": "The Walking Dead",
  "quality": "BluRay",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasons": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
  ],
  "startYear": 2010,
  "titleType": 1,
}
`;

exports[`ApolloParser should parse "Y:\\completed\\Deadpool 2016 1080p BluRay x264 DTS-JYK\\Subs\\French.srt" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x264",
  ],
  "collection": false,
  "extension": ".srt",
  "fileType": "SUBTITLE",
  "imdbId": "tt1431045",
  "languages": Array [
    "fr",
  ],
  "links": Array [
    Object {
      "id": "tt1431045",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1431045",
    },
  ],
  "name": "Deadpool",
  "quality": "BluRay",
  "releaseGroup": "JYK",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "startYear": 2016,
  "titleType": 0,
}
`;

exports[`ApolloParser should parse "Y:\\media\\BoJack Horseman (2014) Season 1 S01 + Extras (1080p BluRay x265 HEVC 10bit AAC 5.1 RCVR)\\BoJack Horseman (2014) - S01E02 - BoJack Hates The Troops (1080p BluRay x265 RCVR).mkv" 1`] = `
Object {
  "audio": Array [
    "aac",
    "5.1",
  ],
  "coding": Array [
    "x265",
    "HEVC",
    "10bit",
    "x265",
  ],
  "collection": false,
  "endYear": 2020,
  "episodeId": "tt3982374",
  "episodeName": "BoJack Hates the Troops",
  "episodeNumber": Array [
    2,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt3398228",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt3398228",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3398228",
    },
  ],
  "name": "BoJack Horseman",
  "quality": "BluRay",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2014,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "Y:\\torrents\\BoJack Horseman (2014) Season 1 S01 + Extras (1080p BluRay x265 HEVC 10bit AAC 5.1 RCVR)\\Featurettes\\Side-by-side Animation Walk-Through.mkv" 1`] = `undefined`;

exports[`ApolloParser should parse "Z:\\clone\\www.Torrenting.org       The Mandalorian S01E01 INTERNAL 1080p WEB H264-DEFLATE\\The.Mandalorian.S01E01.INTERNAL.1080p.WEB.H264-DEFLATE.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "H264",
    "H264",
  ],
  "collection": false,
  "episodeId": "tt9095424",
  "episodeName": "Chapter 1: The Mandalorian",
  "episodeNumber": Array [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt8111088",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt8111088",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt8111088",
    },
  ],
  "name": "The Mandalorian",
  "quality": "WEB-DL",
  "releaseGroup": "DEFLATE",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "Z:\\torrents\\completed\\[TorrentCouch.com].Silicon.Valley.S05.Complete.720p.BRRip.x264.ESubs.[1.6GB].[Season.5.Full]\\[TorrentCouch.com].Silicon.Valley.S05E01.720p.BRRip.x264.ESubs.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x264",
    "x264",
  ],
  "collection": true,
  "endYear": 2019,
  "episodeId": "tt6973218",
  "episodeName": "Grow Fast or Die Slow",
  "episodeNumber": Array [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt2575988",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt2575988",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt2575988",
    },
  ],
  "name": "Silicon Valley",
  "quality": "BluRay",
  "releaseGroup": "TorrentCouch.com",
  "resolution": Object {
    "height": 720,
    "width": null,
  },
  "seasonNumber": 5,
  "startYear": 2014,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "Z:\\torrents\\completed\\2012 (2009) [1080p]\\2012.2009.BluRay.1080p.x264.YIFY.mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x264",
  ],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1190080",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1190080",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1190080",
    },
  ],
  "name": "2012",
  "quality": "BluRay",
  "releaseGroup": "YIFY",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "startYear": 2009,
  "titleType": 0,
}
`;

exports[`ApolloParser should parse "Z:\\torrents\\completed\\AVATAR Series (2005-2014) - COMPLETE The Last Airbender, 2010 Movie, Legend of Korra - 1080p BluRay x264\\2. The Legend of Korra (2012-14)\\Book 2a - Republic City Hustle (2013)\\Avatar (TLoK) - Republic City Hustle, Part 3 of 3 (1080p).mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "endYear": 2014,
  "episodeNumber": Array [
    3,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1695360",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1695360",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1695360",
    },
  ],
  "name": "The Legend of Korra",
  "quality": "BluRay",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "startYear": 2012,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "Z:\\torrents\\completed\\The EXPANSE - Complete Season 3 S03 (2018) - 1080p AMZN Web-DL x264\\The EXPANSE - S03 E11 - Fallen World (1080p - AMZN Web-DL).mp4" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [],
  "collection": false,
  "endYear": 2022,
  "episodeId": "tt6665354",
  "episodeName": "Fallen World",
  "episodeNumber": Array [
    11,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt3230854",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt3230854",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3230854",
    },
  ],
  "name": "The Expanse",
  "quality": "WEB-DL",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 3,
  "startYear": 2015,
  "titleType": 3,
}
`;

exports[`ApolloParser should parse "Z:\\torrents\\completed\\The Hunger Games 4 Film Complete Collection 1080p BluRay 5.1Ch x265 HEVC SUJAIDR\\The Hunger Games Mockingjay Part 2 (2015) 1080p BluRay 5.1Ch x265 HEVC SUJAIDR.mkv" 1`] = `
Object {
  "audio": Array [],
  "coding": Array [
    "x265",
    "HEVC",
  ],
  "collection": false,
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt1951266",
  "languages": Array [],
  "links": Array [
    Object {
      "id": "tt1951266",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1951266",
    },
  ],
  "name": "The Hunger Games: Mockingjay - Part 2",
  "poster": "https://m.media-amazon.com/images/M/MV5BNjQzNDI2NTU1Ml5BMl5BanBnXkFtZTgwNTAyMDQ5NjE@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "SUJAIDR",
  "resolution": Object {
    "height": 1080,
    "width": null,
  },
  "startYear": 2015,
  "titleType": 0,
}
`;
